bindings/c/whiteout_m3.h

typedef struct whiteout_M3BoneAnimationSet whiteout_M3BoneAnimationSet;
typedef struct whiteout_M3ParticleEmitter whiteout_M3ParticleEmitter;
/* ── M3BoneAnimationSet ─────────────────────────────────────────────── */

/* BSET — Bone animation set (v0, 32 bytes) */
/*  */
/* Maps a bone to specific animation sequences with fallback support. In practice, always null in observed corpus data. */
whiteout_M3BoneAnimationSet* whiteout_m3_M3BoneAnimationSet_new(void);
void whiteout_m3_M3BoneAnimationSet_delete(whiteout_M3BoneAnimationSet* self);
/* Primary sequence index */
uint16_t whiteout_m3_M3BoneAnimationSet_get_animationSequenceIndex(const whiteout_M3BoneAnimationSet* self);
void whiteout_m3_M3BoneAnimationSet_set_animationSequenceIndex(whiteout_M3BoneAnimationSet* self, uint16_t value);
/* Fallback sequence index */
uint16_t whiteout_m3_M3BoneAnimationSet_get_fallbackSequenceIndex(const whiteout_M3BoneAnimationSet* self);
void whiteout_m3_M3BoneAnimationSet_set_fallbackSequenceIndex(whiteout_M3BoneAnimationSet* self, uint16_t value);
/* Set name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3BoneAnimationSet_get_name(const whiteout_M3BoneAnimationSet* self);
void whiteout_m3_M3BoneAnimationSet_set_name(whiteout_M3BoneAnimationSet* self, const char* value);
/* ── M3ParticleEmitter ─────────────────────────────────────────────── */

/* PAR_ — Particle emitter (v10–v24, 1300–1496 bytes) */
/*  */
/* The most complex M3 chunk type. Contains bone/material binding, emission shape/rate, per-particle lifetime/velocity/color/size/rotation curves, physics (drag, mass, forces), noise, collision, flipbook, variation channels, spline data, LOD, trails, and splat references. Version extensions add additional flags, force multipliers, UV transforms, phase shift, and ribbon-on-bounce parameters. */
whiteout_M3ParticleEmitter* whiteout_m3_M3ParticleEmitter_new(void);
void whiteout_m3_M3ParticleEmitter_delete(whiteout_M3ParticleEmitter* self);
/* Index into BONE array */
uint32_t whiteout_m3_M3ParticleEmitter_get_boneIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_boneIndex(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Index into MATM material map array */
uint32_t whiteout_m3_M3ParticleEmitter_get_materialIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_materialIndex(whiteout_M3ParticleEmitter* self, uint32_t value);
int32_t whiteout_m3_M3ParticleEmitter_get_additionalFlags(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_additionalFlags(whiteout_M3ParticleEmitter* self, int32_t value);
/* Kill radius (particles beyond this are destroyed) */
float whiteout_m3_M3ParticleEmitter_get_killRadius(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_killRadius(whiteout_M3ParticleEmitter* self, float value);
/* Gravity X component (expected 0) */
uint32_t whiteout_m3_M3ParticleEmitter_get_gravityX(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_gravityX(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Gravity Y component (expected 0) */
uint32_t whiteout_m3_M3ParticleEmitter_get_gravityY(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_gravityY(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Gravity Z component */
float whiteout_m3_M3ParticleEmitter_get_gravity(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_gravity(whiteout_M3ParticleEmitter* self, float value);
/* Size midpoint time (0–1, v12+) */
float whiteout_m3_M3ParticleEmitter_get_sizeMidTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_sizeMidTime(whiteout_M3ParticleEmitter* self, float value);
/* Color midpoint time (0–1, v12+) */
float whiteout_m3_M3ParticleEmitter_get_colorMidTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_colorMidTime(whiteout_M3ParticleEmitter* self, float value);
/* Alpha midpoint time (0–1, v12+) */
float whiteout_m3_M3ParticleEmitter_get_alphaMidTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_alphaMidTime(whiteout_M3ParticleEmitter* self, float value);
/* Rotation midpoint time (0–1, v12+) */
float whiteout_m3_M3ParticleEmitter_get_rotationMidTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationMidTime(whiteout_M3ParticleEmitter* self, float value);
/* Size hold time at midpoint (v14+) */
float whiteout_m3_M3ParticleEmitter_get_sizeMidHoldTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_sizeMidHoldTime(whiteout_M3ParticleEmitter* self, float value);
/* Color hold time at midpoint (v14+) */
float whiteout_m3_M3ParticleEmitter_get_colorMidHoldTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_colorMidHoldTime(whiteout_M3ParticleEmitter* self, float value);
/* Alpha hold time at midpoint (v14+) */
float whiteout_m3_M3ParticleEmitter_get_alphaMidHoldTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_alphaMidHoldTime(whiteout_M3ParticleEmitter* self, float value);
/* Rotation hold time at midpoint (v14+) */
float whiteout_m3_M3ParticleEmitter_get_rotationMidHoldTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationMidHoldTime(whiteout_M3ParticleEmitter* self, float value);
/* Air drag coefficient */
float whiteout_m3_M3ParticleEmitter_get_drag(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_drag(whiteout_M3ParticleEmitter* self, float value);
/* Particle mass */
float whiteout_m3_M3ParticleEmitter_get_mass(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_mass(whiteout_M3ParticleEmitter* self, float value);
/* Random mass variation multiplier */
float whiteout_m3_M3ParticleEmitter_get_massRandom(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_massRandom(whiteout_M3ParticleEmitter* self, float value);
/* Mass–size coupling (v12+) */
float whiteout_m3_M3ParticleEmitter_get_massSizeMultiplier(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_massSizeMultiplier(whiteout_M3ParticleEmitter* self, float value);
/* Local force channel bitmask */
uint16_t whiteout_m3_M3ParticleEmitter_get_localForces(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_localForces(whiteout_M3ParticleEmitter* self, uint16_t value);
/* World force channel bitmask */
uint16_t whiteout_m3_M3ParticleEmitter_get_worldForces(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_worldForces(whiteout_M3ParticleEmitter* self, uint16_t value);
/* Fallback local force channels */
uint16_t whiteout_m3_M3ParticleEmitter_get_localForcesFallback(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_localForcesFallback(whiteout_M3ParticleEmitter* self, uint16_t value);
/* Fallback world force channels */
uint16_t whiteout_m3_M3ParticleEmitter_get_worldForcesFallback(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_worldForcesFallback(whiteout_M3ParticleEmitter* self, uint16_t value);
/* World force mass multiplier (v24+) */
float whiteout_m3_M3ParticleEmitter_get_worldForcesMassMultiplier(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_worldForcesMassMultiplier(whiteout_M3ParticleEmitter* self, float value);
/* Noise displacement amplitude */
float whiteout_m3_M3ParticleEmitter_get_noiseAmplitude(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_noiseAmplitude(whiteout_M3ParticleEmitter* self, float value);
/* Noise spatial frequency */
float whiteout_m3_M3ParticleEmitter_get_noiseFrequency(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_noiseFrequency(whiteout_M3ParticleEmitter* self, float value);
/* Noise temporal coherence */
float whiteout_m3_M3ParticleEmitter_get_noiseCoherence(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_noiseCoherence(whiteout_M3ParticleEmitter* self, float value);
/* Noise edge sharpness */
float whiteout_m3_M3ParticleEmitter_get_noiseEdge(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_noiseEdge(whiteout_M3ParticleEmitter* self, float value);
/* Index + length (v11+) */
uint32_t whiteout_m3_M3ParticleEmitter_get_indexPlusLength(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_indexPlusLength(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Maximum live particle count */
uint32_t whiteout_m3_M3ParticleEmitter_get_maxParticles(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_maxParticles(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Emission shape */
int32_t whiteout_m3_M3ParticleEmitter_get_emitterShape(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_emitterShape(whiteout_M3ParticleEmitter* self, int32_t value);
/* Velocity randomization type */
uint32_t whiteout_m3_M3ParticleEmitter_get_velocityType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_velocityType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Enable size randomization */
uint32_t whiteout_m3_M3ParticleEmitter_get_sizeRandomEnable(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_sizeRandomEnable(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Enable rotation randomization */
uint32_t whiteout_m3_M3ParticleEmitter_get_rotationRandomEnable(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationRandomEnable(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Enable color randomization */
uint32_t whiteout_m3_M3ParticleEmitter_get_colorRandomEnable(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_colorRandomEnable(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Enable alpha randomization */
uint32_t whiteout_m3_M3ParticleEmitter_get_alphaRandomEnable(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_alphaRandomEnable(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Flipbook start initial frame index */
uint8_t whiteout_m3_M3ParticleEmitter_get_flipbookStartInitIndex(const whiteout_M3ParticleEmitter* self);