bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3BoneAnimationSet_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3BoneAnimationSet_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3BoneAnimationSet_get_animationSequenceIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3BoneAnimationSet_set_animationSequenceIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3BoneAnimationSet_get_fallbackSequenceIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3BoneAnimationSet_set_fallbackSequenceIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3BoneAnimationSet_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3BoneAnimationSet_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3ParticleEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_boneIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_materialIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_materialIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_additionalFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_additionalFlags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_killRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_killRadius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_gravityX(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_gravityX(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_gravityY(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_gravityY(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_gravity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_gravity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_sizeMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_sizeMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_colorMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_colorMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_alphaMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_alphaMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_rotationMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_sizeMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_sizeMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_colorMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_colorMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_alphaMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_alphaMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_rotationMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_drag(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_drag(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_mass(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_mass(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_massRandom(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_massRandom(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_massSizeMultiplier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_massSizeMultiplier(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_localForces(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_localForces(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_worldForces(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_worldForces(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_localForcesFallback(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_localForcesFallback(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_worldForcesFallback(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_worldForcesFallback(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_worldForcesMassMultiplier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_worldForcesMassMultiplier(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_noiseAmplitude(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_noiseAmplitude(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_noiseFrequency(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_noiseFrequency(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_noiseCoherence(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_noiseCoherence(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_noiseEdge(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_noiseEdge(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_indexPlusLength(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_indexPlusLength(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_maxParticles(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_maxParticles(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_emitterShape(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_emitterShape(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_velocityType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_velocityType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_sizeRandomEnable(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_sizeRandomEnable(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_rotationRandomEnable(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationRandomEnable(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_colorRandomEnable(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_colorRandomEnable(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_alphaRandomEnable(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_alphaRandomEnable(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m3_M3ParticleEmitter_get_flipbookStartInitIndex(IntPtr self);
